Revision history for plv8

3.0alpha
            - update to v8 7.0
            - add Bigint support
            - add BigInt64Array support

2.3.9       2018-12-09
            - work around pg11 forced filename endings

2.3.8       2018-09-28
            - earlier cleanup of spi
            - support in v8 of xcode 10

2.3.7       2018-07-13
            - support pg 11
            - support procedures

2.3.6       2018-06-21
            - change v8 to use its default array buffer allocator rather than
              using pg's memory contexts

2.3.5       2018-06-13
            - better bytea handling for arrays

2.3.4       2018-05-07
            - add execution timeout support to windows
            - add automatic creation of update files on macos/linux/unix
            - add automatic creation of setup files on windows

2.3.3       2018-04-27
            - added upgrade scripts
            - added cancelling signal support on macos/linux/unix

2.3.2       2018-04-13
            - moved permissions check into a PG_TRY/PG_CATCH block
            - updated external startup compilation to include v8 >= 5.0

2.3.1       2018-03-07
            - add optional functionality for execution timeouts

2.3.0       2018-02-12
            - track v8 6.4.388.40
            - change build system
            - force static to be default build

2.1.0       2017-07-05
            - track v8 5.8.301
            - better error handling

2.0.0       2017-02-02
            - track v8 5.4.500.43

2.0.0-dev
            - track v8 4.4-4.10
            - add plv8_version()

1.5.1       2016-03-27
            - add fix for current resource owner

1.5.0       2016-02-26
            - Adaptions for current V8 version, e.g. 4.1.0.x - 4.3.66
              (see http://strongloop.com/strongblog/node-js-v0-12-c-apis-breaking/
              for an overview of the V8 changes which break existing code bases)
            - GUC plv8.v8_flags for V8 engine initialization flags