@@ -51,6 +51,10 @@ ifdef BIGINT_GRACEFUL
 	CCFLAGS += -DBIGINT_GRACEFUL
 endif
 
+ifdef JSONB_DIRECT_CONVERSION
+	CCFLAGS += -DJSONB_DIRECT_CONVERSION
+endif
+
 CCFLAGS += -I$(AUTOV8_DIR)/include -I$(AUTOV8_DIR)
 # We're gonna build static link.  Rip it out after include Makefile
 SHLIB_LINK := $(filter-out -lv8, $(SHLIB_LINK))
