@@ -4,6 +4,7 @@ Revision history for plv8
             - update to v8 7.0
             - add Bigint support
             - add BigInt64Array support
+            - add direct JSONB conversion to and from v8 objects
 
 2.3.9       2018-12-09
             - work around pg11 forced filename endings
